[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/square.png" type="Texture" id=1]
[ext_resource path="res://foam.gd" type="Script" id=2]
[ext_resource path="res://Entities/EntitiesFadeOut.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.30055, 2.16901 )

[node name="foam" type="RigidBody2D"]
mass = 0.00102041
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.32445, 6.16901 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.32445, 6.16901 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EntitiesFadeOut = ExtResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 8.32923, 6.26807 )
scale = Vector2( 0.801607, 0.649409 )
[connection signal="body_entered" from="." to="." method="_on_foam_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
